--- a/1_data_import.Rmd
+++ b/1_data_import.Rmd
@@ -269,6 +269,7 @@ individuals = individuals %>%
 ```
 
 
+
 ## Combine informations from pregnancy file and individual file
 ```{r Combine informations from pregnancy file and individual file}
 ## Combine informations from pregnancy history and individual files
@@ -276,6 +277,20 @@ alldata_pregnancy = inner_join(individuals, pregnancy, by = "mother_birthdate")
 
 ```
 
+## Gene birthorder (based on both parents)
+```{r gene birthorder}
+### Gene birthorder is calculated by grouping individuals together, for whom we know both parents and making a rank list
+alldata_pregnancy = alldata_pregnancy %>%
+  group_by(mother_father_dyad) %>%
+    mutate(birthorder_genes = min_rank(birthdate),
+           birthorder_genes = ifelse(is.na(mother_father_dyad), NA, birthorder_genes),
+           sibling_count_genes = sum(!is.na(mother_father_dyad)))
+ggplot(alldata_pregnancy, aes(x=sibling_count_genes, y=birthorder_genes)) + geom_jitter()
+
+## Plot uterus birth order vs. gene birthorder
+ggplot(alldata_pregnancy, aes(x=birthorder_uterus_alive, y=birthorder_genes)) + geom_jitter()
+
+```
 
 
 ## Select IQ data
@@ -532,6 +547,35 @@ alldata_birthorder %>%
    mutate(birthorder_uterus_alive = factor(birthorder_uterus_alive),
          sibling_count_uters_alive = sibling_count_uterus_alive) %>%
   ggplot(aes(x=birthorder_uterus_alive, y=big5_open, colour = sibling_count_uterus_alive, group = sibling_count_uterus_alive)) + 
+  geom_pointrange(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4)) + 
+  geom_line(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4))
+
+alldata_birthorder %>%
+  filter(birthorder_uterus_alive < 8) %>%
+  filter(sibling_count_uterus_alive < 8) %>%
+   mutate(birthorder_uterus_alive = factor(birthorder_uterus_alive),
+         sibling_count_uters_alive = sibling_count_uterus_alive) %>%
+  ggplot(aes(x=birthorder_uterus_alive, y=big5_ext, colour = sibling_count_uterus_alive, group = sibling_count_uterus_alive)) + 
+  geom_pointrange(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4)) + 
+  geom_line(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4))
+
+### Genes:
+alldata_birthorder %>%
+  filter(birthorder_genes < 8) %>%
+  filter(siblingcount_genes < 8) %>%
+   mutate(birthorder_genes = factor(birthorder_genes),
+         siblingcount_genes = siblingcount_genes) %>%
+  ggplot(aes(x=birthorder_genes, y=g_factor, colour = siblingcount_genes, group = siblingcount_genes)) + 
+  geom_pointrange(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4)) + 
+  geom_line(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4))
+
+
+alldata_birthorder %>%
+  filter(birthorder_genes < 8) %>%
+  filter(siblingcount_genes < 8) %>%
+   mutate(birthorder_genes = factor(birthorder_genes),
+         siblingcount_genes = siblingcount_genes) %>%
+  ggplot(aes(x=birthorder_genes, y=big5_open, colour = siblingcount_genes, group = siblingcount_genes)) + 
   geom_pointrange(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4)) + 
   geom_line(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4))
 
