--- a/3_preliminary_analyses.Rmd
+++ b/3_preliminary_analyses.Rmd
@@ -31,17 +31,27 @@ alldata_birthorder = alldata_birthorder %>%
     birthorder_uterus_alive_factor = factor(birthorder_uterus_alive_factor, levels = c("1","2","3","4","5","5+")),
     sibling_count_uterus_alive_factor = as.character(sibling_count_uterus_alive),
     sibling_count_uterus_alive_factor = ifelse(sibling_count_uterus_alive > 5, "5+", sibling_count_uterus_alive_factor),
-    sibling_count_uterus_alive_factor = factor(sibling_count_uterus_alive_factor, levels = c("1","2","3","4","5","5+")))
+    sibling_count_uterus_alive_factor = factor(sibling_count_uterus_alive_factor, levels = c("1","2","3","4","5","5+")),
+    birthorder_genes_factor = as.character(birthorder_genes),
+    birthorder_genes_factor = ifelse(birthorder_genes >5 , "5+", birthorder_genes_factor),
+    birthorder_genes_factor = factor(birthorder_genes_factor, levels = c("1","2","3","4","5","5+")),
+    siblingcount_genes_factor = as.character(siblingcount_genes),
+    siblingcount_genes_factor = ifelse(siblingcount_genes >5 , "5+", siblingcount_genes_factor),
+    siblingcount_genes_factor = factor(siblingcount_genes_factor, levels = c("1","2","3","4","5","5+")))
 
 
 crosstabs(~ sibling_count_uterus_alive_factor + birthorder_uterus_alive_factor, data = alldata_birthorder)
+crosstabs(~ siblingcount_genes_factor + birthorder_genes_factor, data = alldata_birthorder)
 
 alldata_birthorder$sex = factor(ifelse(alldata_birthorder$sex.x==1, "male", "female"))
 
 # remove only children?
-no_only_children = alldata_birthorder %>% filter(as.numeric(sibling_count_uterus_alive) > 1)
-crosstabs(~ sibling_count_uterus_alive_factor + birthorder_uterus_alive_factor, data = no_only_children)
+no_only_children_uterus = alldata_birthorder %>% filter(as.numeric(sibling_count_uterus_alive) > 1)
+crosstabs(~ sibling_count_uterus_alive_factor + birthorder_uterus_alive_factor, data = no_only_children_uterus)
 
+no_only_children_genes = alldata_birthorder %>% filter(as.numeric(siblingcount_genes) > 1)
+
+crosstabs(~ siblingcount_genes_factor + birthorder_genes_factor, data = no_only_children_genes)
 
 ```
 
@@ -53,15 +63,19 @@ summary(m1)
 m2 = lm(riskA ~ sex + age + byear + birthorder_uterus_preg, data = alldata_birthorder)
 summary(m2)
 
-x1 = lm(riskA ~ sex + age + byear + birthorder_uterus_alive_factor * sibling_count_uterus_alive_factor, data = no_only_children)
+x1 = lm(riskA ~ sex + age + byear + birthorder_uterus_alive_factor * sibling_count_uterus_alive_factor, data = no_only_children_uterus)
 summary(x1)
 plot(allEffects(x1))
 
-x2 = lm(g_factor ~ sex + age + byear + birthorder_uterus_alive_factor * sibling_count_uterus_alive_factor, data = no_only_children)
+x2 = lm(g_factor ~ sex + age + byear + birthorder_uterus_alive_factor * sibling_count_uterus_alive_factor, data = no_only_children_uterus)
 summary(x2)
 plot(allEffects(x2))
 
-m1m = lmer(riskA ~ gender + age + byear + birthorder_uterus_alive_factor * sibling_count_uterus_alive_factor + (1 | mother_pidlink), data = no_only_children)
+x2_genes = lm(g_factor ~ sex + age + byear + birthorder_genes_factor * siblingcount_genes_factor, data = no_only_children_genes)
+summary(x2_genes)
+plot(allEffects(x2_genes))
+
+m1m = lmer(riskA ~ gender + age + byear + birthorder_uterus_alive_factor * sibling_count_uterus_alive_factor + (1 | mother_pidlink), data = no_only_children_uterus)
 summary(m1m)
 ```
 
