--- a/3_preliminary_analyses.Rmd
+++ b/3_preliminary_analyses.Rmd
@@ -35,13 +35,13 @@ alldata_birthorder = alldata_birthorder %>%
     birthorder_genes_factor = as.character(birthorder_genes),
     birthorder_genes_factor = ifelse(birthorder_genes >5 , "5+", birthorder_genes_factor),
     birthorder_genes_factor = factor(birthorder_genes_factor, levels = c("1","2","3","4","5","5+")),
-    siblingcount_genes_factor = as.character(siblingcount_genes),
-    siblingcount_genes_factor = ifelse(siblingcount_genes >5 , "5+", siblingcount_genes_factor),
-    siblingcount_genes_factor = factor(siblingcount_genes_factor, levels = c("1","2","3","4","5","5+")))
+    sibling_count_genes_factor = as.character(sibling_count_genes),
+    sibling_count_genes_factor = ifelse(sibling_count_genes >5 , "5+", sibling_count_genes_factor),
+    sibling_count_genes_factor = factor(sibling_count_genes_factor, levels = c("1","2","3","4","5","5+")))
 
 
 crosstabs(~ sibling_count_uterus_alive_factor + birthorder_uterus_alive_factor, data = alldata_birthorder)
-crosstabs(~ siblingcount_genes_factor + birthorder_genes_factor, data = alldata_birthorder)
+crosstabs(~ sibling_count_genes_factor + birthorder_genes_factor, data = alldata_birthorder)
 
 alldata_birthorder$sex = factor(ifelse(alldata_birthorder$sex.x==1, "male", "female"))
 
@@ -49,9 +49,9 @@ alldata_birthorder$sex = factor(ifelse(alldata_birthorder$sex.x==1, "male", "fem
 no_only_children_uterus = alldata_birthorder %>% filter(as.numeric(sibling_count_uterus_alive) > 1)
 crosstabs(~ sibling_count_uterus_alive_factor + birthorder_uterus_alive_factor, data = no_only_children_uterus)
 
-no_only_children_genes = alldata_birthorder %>% filter(as.numeric(siblingcount_genes) > 1)
+no_only_children_genes = alldata_birthorder %>% filter(as.numeric(sibling_count_genes) > 1)
 
-crosstabs(~ siblingcount_genes_factor + birthorder_genes_factor, data = no_only_children_genes)
+crosstabs(~ sibling_count_genes_factor + birthorder_genes_factor, data = no_only_children_genes)
 
 ```
 
@@ -71,9 +71,19 @@ x2 = lm(g_factor ~ sex + age + byear + birthorder_uterus_alive_factor * sibling_
 summary(x2)
 plot(allEffects(x2))
 
-x2_genes = lm(g_factor ~ sex + age + byear + birthorder_genes_factor * siblingcount_genes_factor, data = no_only_children_genes)
+no_only_children_uterus %>%
+    ggplot(aes(x=birthorder_uterus_alive_factor, y=g_factor, colour = sibling_count_uterus_alive_factor, group = sibling_count_uterus_alive_factor)) + 
+  geom_pointrange(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4)) + 
+  geom_line(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4))
+
+x2_genes = lm(g_factor ~ sex + age + byear + birthorder_genes_factor * sibling_count_genes_factor, data = no_only_children_genes)
 summary(x2_genes)
 plot(allEffects(x2_genes))
+
+no_only_children_genes %>%
+    ggplot(aes(x=birthorder_genes_factor, y=g_factor, colour = sibling_count_genes_factor, group = sibling_count_genes_factor)) + 
+  geom_pointrange(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4)) + 
+  geom_line(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4))
 
 m1m = lmer(riskA ~ gender + age + byear + birthorder_uterus_alive_factor * sibling_count_uterus_alive_factor + (1 | mother_pidlink), data = no_only_children_uterus)
 summary(m1m)
