--- a/1_data_import.Rmd
+++ b/1_data_import.Rmd
@@ -134,6 +134,7 @@ length(unique(pregnancy$pidlink))
 
 ## Rename Variables
 pregnancy = pregnancy %>% rename(lifebirths = ch06, gender = ch08, birth_day = ch09day, birth_month = ch09mth, birth_year = ch09yr, mother_pidlink = pidlink, alive = ch25) # pregnancy$lifebirths values: 1 = still pregnant, 2 = livebirth, 3 = still birth, 4 = misscarriage
+n_missing(pregnancy$mother_pidlink)
 
 ## Set values as NA that are missing
 pregnancy$birth_day[ pregnancy$birth_day>31] = NA
@@ -179,7 +180,6 @@ length(unique(twinmothers_alive$mother_pidlink)) ## number of families that have
 
 pregnancy_alive = pregnancy_alive %>%
     filter(!(mother_pidlink %in% twinmothers$mother_pidlink))
-
 ```
 
 
@@ -191,7 +191,7 @@ pregnancy1 = pregnancy %>%
   group_by(mother_pidlink) %>%
   mutate(birthorder_uterus_preg = min_rank(birthdate),
          sibling_count_uterus_preg = sum(!is.na(birthdate)))
-         
+
 ## Biological Uterus Birthorder calculations with all births:
 pregnancy2 = pregnancy %>%
   filter(lifebirths == 2) %>%
@@ -208,7 +208,7 @@ pregnancy = left_join(pregnancy1, pregnancy2, by="mother_birthdate")
 
 ### How many no-only-children are left?
 pregnancy = as.data.frame(pregnancy)
-pregnancy$mother_pidlink = pregnancy$mother_pidlink.y
+pregnancy$mother_pidlink = pregnancy$mother_pidlink.x
 pregnancy$mother_pidlink.y = pregnancy$mother_pidlink.x = NULL
 
 pregnancy_check = pregnancy %>%
@@ -226,7 +226,7 @@ pregnancy_alive_check = pregnancy_alive_check %>%
 pregnancy_alive_and_old_enough_check = pregnancy_alive_check %>%
     filter(birth_year < 2000)
 
-
+n_missing(pregnancy$mother_pidlink)
 
 ### Graphs
 ## Biological Birthorder - Uterus_Pregnancies
@@ -261,10 +261,17 @@ w1_marriage = w1_marriage %>% rename(kw10mth = kw05b, kw10yr = kw05a, kw18mth = 
 
 ## Combine marriage informations
 marriage = bind_rows(w1_marriage, w2_marriage, w3_marriage, w4_marriage, w5_marriage)
+
+length(intersect(marriage$pidlink, pregnancy$mother_pidlink))
+length(setdiff(pregnancy$mother_pidlink, marriage$pidlink))
+length(setdiff(marriage$pidlink, pregnancy$mother_pidlink))
+
 # Rename columns
 marriage = marriage %>% rename(start_year = kw10yr, start_month = kw10mth, end_year = kw18yr, end_month = kw18mth)
 marriage = marriage %>% arrange(pidlink, start_year, start_month, end_year, end_month)
+
 marriage = marriage %>% filter(!duplicated(cbind(pidlink, start_year, start_month)) | !is.na(start_year) | is.na(start_month)) # nobody gets married twice on the same day, right? so these are dupes.
+
 # Set values as NA that are missing
 marriage$start_year[ marriage$start_year<1900] = NA
 marriage$start_year[ marriage$start_year>2016] = NA
@@ -283,18 +290,19 @@ library(lubridate)
 ## Calculate date for beginning of marriage:
 pad_month = function(x) { str_pad(x, width = 2, side = "left", pad = "0")}
 marriage = marriage %>% 
+  ungroup() %>%
   mutate(
         start_string = str_c(start_year, "-", ifelse(is.na(start_month), "01", pad_month(start_month)), "-01"),
-        end_string = str_c(end_year, "-", ifelse(is.na(end_month), "12", pad_month(end_month)), "-01")
-  )
-marriage = marriage %>% ungroup() %>% mutate(start = ymd(start_string),
-                               end = ymd(end_string) + months(1) - days(1))
+        end_string = str_c(end_year, "-", ifelse(is.na(end_month), "12", pad_month(end_month)), "-01"),
+        start = ymd(start_string),
+        end = ymd(end_string) + months(1) - days(1))
 
 # marriage$start_string[!is.na(marriage$start_string) & is.na(marriage$start) ]
 # marriage$end_string[!is.na(marriage$end_string) & is.na(marriage$end) ]
 # 
 qplot(marriage$start)
 qplot(marriage$end)
+
 ## Count number of marriages
 marriage = marriage %>%
   arrange(pidlink, start, end) %>%
@@ -305,9 +313,6 @@ marriage = marriage %>%
 
 dupes = unique(marriage$marriage_id[duplicated(marriage$marriage_id)])
 
-## Remove all families with unclear fathers
-marriage = marriage %>%
-  filter(! marriage_id %in% dupes)
 
 ## Graphic analysis
 marriage %>% ggplot(aes(number_marriages, order_marriage)) + geom_jitter(width=0.1)
@@ -319,12 +324,14 @@ table(is.na(marriage$end))
 
 pregnancy$month = paste0(pregnancy$birth_year,"-", ifelse(is.na(pregnancy$birth_month), "01", pad_month(pregnancy$birth_month)))
 
+
+### Marriage Timeline
 minimum_start = min(ymd(str_c(pregnancy$month, "-01")), na.rm = T)
 maximum_end = max(ymd(str_c(pregnancy$month, "-01")), na.rm = T)
 marriage_timeline = marriage %>%
     mutate(implied_start = as.Date(ifelse(is.na(start), minimum_start , start), origin="1970-01-01"),
            implied_end = as.Date(ifelse(is.na(end), maximum_end , end), origin="1970-01-01")) %>%
-  filter(start < end)
+  filter(implied_start < implied_end)
 
 marriage_timeline = marriage_timeline %>%
     rowwise() %>%
@@ -334,25 +341,24 @@ marriage_timeline = marriage_timeline %>%
         order_marriage = .$order_marriage,
         start = .$start,
         end = .$end,
-        month=seq(.$implied_start,.$implied_end,by="1 month")))
+        month = seq(.$implied_start,.$implied_end, by="1 month") ))
 
+# no duplicate mother_id - month combinations (no two marriages at the same time)
 marriage_timeline = marriage_timeline %>% 
   arrange(mother_pidlink, start, end) %>% 
   distinct(mother_pidlink, month, .keep_all = TRUE)
 
-
 marriage_timeline$month = stringr::str_sub(as.character(marriage_timeline$month),1,7)
 
+# How many IDs from the pregnancy file match the marriage file?
 length(intersect(pregnancy$mother_pidlink, marriage_timeline$mother_pidlink))
-length(setdiff(pregnancy$mother_pidlink, marriage_timeline$mother_pidlink))
-length(setdiff(marriage_timeline$mother_pidlink, pregnancy$mother_pidlink))
 
 pregnancy = pregnancy %>% left_join(marriage_timeline, by = c("mother_pidlink", "month"))
 
-rm(marriage_timeline)
-
+table(is.na(pregnancy$marriage_id))
 table(table(pregnancy$marriage_id))
-sum(table(table(pregnancy$marriage_id)))
+
+rm(marriage_timeline)
 ```
 
 
@@ -371,12 +377,6 @@ individuals_unchanged = individuals
 ## people whose parents can not be identified have to be marked as NA:
 individuals$fatherID[ individuals$fatherID>50] = NA
 individuals$motherID[ individuals$motherID>50] = NA
-
-
-## create mother_father_number that should be identical for all siblings in one family that share the same parents
-individuals = individuals %>% mutate(
-  mother_father_dyad = stringr::str_c(father_pidlink, mother_pidlink)
-) # father_pidlink and mother_pidlink; if one is missing = NA
 
 
 ## Create date of birth
@@ -428,12 +428,15 @@ alldata_pregnancy_check = inner_join(individuals, pregnancy_alive_and_old_enough
 
 ## Gene birthorder (based on both parents)
 ```{r gene birthorder}
-### Gene birthorder is calculated by grouping individuals together, for whom we know both parents and making a rank list
+### Gene birthorder is calculated by grouping individuals together, for whom we know both the mother and her marriage history and making a rank list
 alldata_pregnancy = alldata_pregnancy %>%
-  group_by(mother_father_dyad) %>%
+  filter(!is.na(marriage_id)) %>%
+  group_by(marriage_id) %>%
     mutate(birthorder_genes = min_rank(birthdate),
-           birthorder_genes = ifelse(is.na(mother_father_dyad), NA, birthorder_genes),
-           sibling_count_genes = sum(!is.na(mother_father_dyad)))
+           birthorder_genes = ifelse(is.na(marriage_id), NA, birthorder_genes),
+           sibling_count_genes = sum(!is.na(marriage_id)))
+
+
 ggplot(alldata_pregnancy, aes(x=sibling_count_genes, y=birthorder_genes)) + geom_jitter()
 
 ## Plot uterus birth order vs. gene birthorder
@@ -535,18 +538,6 @@ round(cor(iq %>% select(g_factor, raven, math, count_backwards, words_immediate,
 
 formr::missingness_patterns(iq %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering, g_factor)) ## oops, lavaan only predicts the g factor for complete cases
 
-# impute missing values
-# library(missMDA)
-# estimate number of components
-# rr = iq %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering)
-# nb <- estim_ncpPCA(rr, ncp.min=0, ncp.max=5)
-# actual impute
-# rr.impute <- imputePCA(rr, ncp=nb$ncp)
-# https://stats.stackexchange.com/questions/123725/how-can-i-estimate-a-principal-component-from-incomplete-data?noredirect=1&lq=1
-
-# Run pca
-# pca.fit <- prcomp(rr.impute$completeObs)
-# pca.fit$rotation
 ```
 
 
